[package]
name = "solution"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
chrono = "0.4"
lazy_static = "1.4.0"
log = "0.4"
simple-log = "1.3.2"